# imastaser.github.io

./: .gitignore  CNAME  about.html  ai.html  atom.xml  haskell.html  imastaser.cabal  index.html  math.html  posts.html  publish.sh  rebuild.sh  rss.xml  site-original.hs  site.hs  stack.yaml  tack q  watch.sh
.github/workflows/: publish.yaml
css/: bootstrap-theme.min.css  bootstrap.min.css  default.css  quotes.css
draft/: qarozner-1.markdown
hogi/: books.html  index.html
hogi/astuatsashunch/: index.html
hogi/grabar/: introduction.html
hogi/mashalyan/: astvacain-naxaxnamutyun.html  avetarani-usuzum.html  kyanqi_imast.html  qarozner.html
hogi/narek/: matean.html
hogi/nshnorhali/: havatov.html
hogi/tatevaci/: 2016-05-01-qarozner.html
js/: codeCopy.js  quotes.js
marmin/: 2016-05-01-gym-report.html  index.html  pull-up-2016.html
mitq/: index.html
mitq/draft/: 2013-12-04-subject-nerqin-artaqin.html  2013-12-05-vardan-Feldstein.html
mitq/etc/: 2014-my-pets.html  books-i-buy.html  isuzu.html  soyuzfilm.html
mitq/haskell/: algebraic-data-types.html  books.html  combonad.html  courses.html  videos.html
mitq/logic/: formal-verification.html  logics.html
mitq/math/: seminars.html
mitq/methodology/: 2013-12-04-subject-nerqin-artaqin.html  2013-12-05-vardan-Feldstein.html
mitq/programming/: 2014-01-10-hakyll-starting-guide.html  2014-02-03-emacs shortcuts.html  2014-02-07-ghc-from-source.html  2014-03-07-git-cheatsheets.html  2014-12-06-tmux-tips.html  2014-my-pets.html  algo-design-analysis-I.html  algorithm-analysis.html  async-resources.html  books-i-buy.html  coverletterforwire.html  cryptography.html  deployment.html  dev-server-setup.html  dynamic-programming.html  ghc-from-source.html  hakyll-starting-guide.html  how-to-install-coq.html  howtos.html  install-pygments.html  learnhaskell.resources.html  nixos.html  online-courses.html  some-links.html  sorting-algorithms.html  xenobits-setup.html  yet-another-deployment.html
pages/: about.md  haskell.md
posts/hogi/: books.markdown  index.html
posts/marmin/: 2016-05-01-gym-report.markdown  index.html
posts/mitq/: index.html
src/: Compilers.hs  Main.hs  site.hs
tags/: DevOps.html  Isuzu.html  OS.html  PiH.html  SF.html  adt.html  algorithms.html  asymptotic.html  async.html  books.html  coq.html  courses.html  cryptography.html  deployment.html  dev-server.html  dynamic.html  e-books.html  emacs.html  fp.html  ghc.html  git.html  grabar.html  hakyll.html  haskell.html  howto-2023.html  howto.html  hxr.html  learning.html  linux-setup.html  logic.html  math.html  monads.html  mvanier.html  nixos.html  proover.html  pull-up.html  python.html  scheme.html  seminar.html  soe.html  (+32 more)
templates/: default.html  post-list.html  posts.html  quotes.html
web/: about.rst  contact.markdown  index.html
web/css/: default.css
web/draft/: 2013-12-05-vardan-Feldstein.markdown
web/js/: tocgen.js
web/pages/: about.md
(+178 files in other folders)
