name:                imastaser
version:             0.1.0.0
synopsis:            Hakyll project template from stack
description:         Please see README.md
homepage:            https://github.com/imastaser/imastaser#readme
license:             BSD3
license-file:        LICENSE
author:              Arthur Vardanyan
maintainer:          artie.vard@gmail.com
copyright:           2016 Arthur Vardanyan
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable imastaser
  main-is:             site.hs
    -- hs-source-dirs:
    -- other-modules:
    -- other-extensions:
  default-language:    Haskell2010
  ghc-options:         -threaded
  build-depends:       base == 4.*,
                       hakyll == 4.7.*,
                       filepath   >= 1.3.0.1,
                       pandoc,
                       text,
                       time,
                       blaze-html,
                       old-locale
