cabal-version:       2.4

name:                imastaser
version:             0.1.0.0
synopsis:            personal site; built with hakyll
homepage:            https://github.com/imastaser/imastaser#readme
license:             BSD-3-Clause
-- license-file:        LICENSE
author:              Arthur Vardanyan
maintainer:          artie.vard@gmail.com
copyright:           2016 Arthur Vardanyan
category:            Web
build-type:          Simple

executable imastaser
  main-is: Main.hs
  hs-source-dirs: src
  other-modules: Compilers
    -- other-extensions:
  ghc-options:         -threaded
  build-depends:  base >=4.7 && <5
                , hakyll >= 4.13.4.0
                , filepath
                , pandoc
                , text
                , time
                , blaze-html
                , old-locale
                , megaparsec
--   ghc-options:       -Wall -threaded
  default-language:  Haskell2010


